--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{name}}
 
-	<button class="change-sleep" data-id="{{id}}" data-newsleep="{{sleep}}">
+	<button class="munchBtn" data-id="{{id}}" data-munched="{{munched}}">
 		{{#if munched}}Munch!{{else}}Undo!{{/if}}
 	</button>
 
