finished public burrgers.js. work on styling next

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,7 @@
 	{{name}}
 
 	<button class="munchBtn" data-id="{{id}}" data-munched="{{munched}}">
-		{{#if munched}}Munch!{{else}}Undo!{{/if}}
+		{{#if munched}}Munch!{{else}}undo{{/if}}
 	</button>
 
 	{{!-- <button class="delete-cat" data-id="{{this.id}}">DELETE!</button> --}}
