--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,38 @@
 <h1>Let's have some burgers!</h1>
+<div class="row"> 
+  <div class="col-6">
+  <h2>Burgers Made!</h2>
 
-<h2>Burgers Made!</h2>
 
-<ul>
   {{#each burgers}}
     {{#unless munched}}
       {{> burgers/burger-block munched=true}}
     {{/unless}}
   {{/each}}
-</ul>
 
+</div>
+
+<div class="col-6">
 <h2>Munched!</h2>
 
-<ul>
+
+
   {{#each burgers}}
     {{#if munched}}
       {{> burgers/burger-block munched=false}}
     {{/if}}
   {{/each}}
-</ul>
+
+</div>
+</div>
+
 
 <h2>Add a Burger</h2>
 <form class="create-form">
 
   <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
+    <label for="burg">Burger Name:</label>
+    <input type="text" id="burg" name="name">
+    <button type="submit">Add Burger</button>
   </div>
-
-  <div class="form-group">
-    <label for="munched">Munched?</label><br>
-    <input type="radio" name="munched" value="1" checked> Munched!<br>
-    <input type="radio" name="munched" value="0"> Awake
-  </div>
-
-  <button type="submit">Add Burger</button>
 </form>
