--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -5,5 +5,5 @@
 		{{#if munched}}Munch!{{else}}undo{{/if}}
 	</button>
 
-	{{!-- <button class="delete-cat" data-id="{{this.id}}">DELETE!</button> --}}
+	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
 </li>
