--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,46 @@
 <h1>Let's have some burgers!</h1>
-<div class="row"> 
-  <div class="col-6">
-  <h2>Burgers Made!</h2>
-
-
-  {{#each burgers}}
-    {{#unless munched}}
-      {{> burgers/burger-block munched=true}}
-    {{/unless}}
-  {{/each}}
-
-</div>
-
 <div class="col-6">
-<h2>Munched!</h2>
+  <div class="row">
+    <div class="col-6">
+      <h2>Burgers Made!</h2>
 
 
+      {{#each burgers}}
+      {{#unless munched}}
+      {{> burgers/burger-block munched=true}}
+      {{/unless}}
+      {{/each}}
 
-  {{#each burgers}}
-    {{#if munched}}
+    </div>
+
+    <div class="col-6">
+      <h2>Munched!</h2>
+
+      {{#each burgers}}
+      {{#if munched}}
       {{> burgers/burger-block munched=false}}
-    {{/if}}
-  {{/each}}
+      {{/if}}
+      {{/each}}
 
-</div>
-</div>
-
-
-<h2>Add a Burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="burg">Burger Name:</label>
-    <input type="text" id="burg" name="name">
-    <button type="submit">Add Burger</button>
+    </div>
   </div>
-</form>
+
+
+  <h2>Add a Burger</h2>
+  <form class="create-form">
+
+    <div class="form-group">
+      <label for="burg">Burger Name:</label>
+      <input type="text" id="burg" name="name">
+      <button type="submit">
+        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd"
+            d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+        </svg>
+      </button>
+
+    </div>
+  </form>
+
+</div>
