--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,8 @@
-li {
-  padding: 5px;
-  margin: 5px;
-  background: #faebd7;
+ul {
+  padding: 3px;
+  /* margin: 3px; */
+  border-style: solid;
+  background-color: khaki;
 }
 
 .label {
@@ -26,4 +27,15 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+body {
+  background-image: url("../images/burger-background.png");
+}
+
+.form-group{
+  padding: 3px;
+  /* margin: 3px; */
+  border-style: solid;
+  background-color: khaki;
 }
