--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,7 @@
+<br>
 <h1>Let's have some burgers!</h1>
+<br>
+
 <div class="col-6">
   <div class="row">
     <div class="col-6">
@@ -25,6 +28,7 @@
     </div>
   </div>
 
+  <br>
 
   <h2>Add a Burger</h2>
   <form class="create-form">
@@ -33,6 +37,7 @@
       <label for="burg">Burger Name:</label>
       <input type="text" id="burg" name="name">
       <button type="submit">
+        {{!-- submit icon --}}
         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor"
           xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd"
